2003-06-05  Nick Drochak  <ndrochak@gol.com>

	* UTF8Encoding.cs: Cleanups according to class status page

2003-05-10  Miguel de Icaza  <miguel@ximian.com>

	* Encoding.cs (GetEncoding): Add all the aliases documented in the
	framework.  We were missing a few.
	
	Reorganize the table.  Also, convert the input name into the
	lower-case - to _ before we compare against our table.
	
2003-05-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* StringBuilder.cs: fixed bug #41397.

2003-04-12  Miguel de Icaza  <miguel@ximian.com>

	* Encoding.cs: Enabled the code paths that we did have commented
	out, they seem to work now.

Fri Apr 11 08:29:50 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* StringBuilder.cs: cache the result from ToString().

2003-03-18  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* UnicodeEncoding.cs: changed WebName from unicodeFFFE to utf-16be.
	  (unicodeFFFE is MS compliant, but isn't valid IANA encoding name.)

2003-03-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ASCIIEncoding.cs: fixed bug #38984.

2003-03-05  Aleksey Demakov <avd@openlinksw.com>

	* ASCIIEncoding.cs:
	* Latin1Encoding.cs: fix GetString (byte[]) and
	GetString (byte[], int, int) for zero-length case.

2003-02-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Latin1Encoding.cs: added Serializable attribute.

2003-02-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Encoding.cs: removed UnixConsoleEncoding.

2003-01-30  Zoltan Varga  <vargaz@freemail.hu>

	* StringBuilder.cs: fix the constructor: 'value' can be NULL,
	'capacity' must be >=0, use defaultCapacity only if capacity equals 0.
	This fixes the StringBuilder unit tests.

2003-01-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* StringBuilder.cs: fixed typo in set_Length.

2002-12-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Encoding.cs: g_get_encoding () returns "ASCII". In Default, when the
	encoding is not found, default to UTF8Unmarked. Removed comment in