@@ -1,3 +1,8 @@
+2003-08-21 Ben Maurer  <bmaurer@users.sourceforge.net>
+
+	* String.cs: Created method FormatHelper that does formatting,
+	using a StringBuilder.
+
 2003-08-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* Array.cs: patch by lb@lb.ods.org that fixes bug #47707.
